--- a/dm_course.html
+++ b/dm_course.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Data Visualization" />
+          <img src="img/seo.png" alt="Data Visualization" />
           <div class="overlay">
             <a href="video1.html" class="btn-materi">View Video</a>
             <a href="modules1.html" class="btn-materi">View Modules</a>
@@ -42,14 +42,13 @@
         </div>
         <div class="materi-details">
           <h3>Website SEO</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/copywriting.png" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -57,14 +56,13 @@
         </div>
         <div class="materi-details">
           <h3>Copywriting</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/ads.png" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -72,14 +70,13 @@
         </div>
         <div class="materi-details">
           <h3>FB Ads & Google Ads</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/scaleup.png" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -87,7 +84,6 @@
         </div>
         <div class="materi-details">
           <h3>Scale Up Technic</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
