--- a/fw_course.html
+++ b/fw_course.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Data Visualization" />
+          <img src="img/code.png" alt="Data Visualization" />
           <div class="overlay">
             <a href="video1.html" class="btn-materi">View Video</a>
             <a href="modules1.html" class="btn-materi">View Modules</a>
@@ -42,14 +42,13 @@
         </div>
         <div class="materi-details">
           <h3>HTML & CSS</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/code.png" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -57,14 +56,13 @@
         </div>
         <div class="materi-details">
           <h3>Javascript web</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/data.png" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -72,7 +70,6 @@
         </div>
         <div class="materi-details">
           <h3>Node JS for Back-End</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
