--- a/index_admin.html
+++ b/index_admin.html
@@ -7,7 +7,10 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Feather icons -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -54,7 +57,6 @@
           <img src="img/ml.jpg" alt="ml" />
           <div class="btn-course-details">
             <h3>Machine <br />Learning</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <a href="ml_course.html" class="btn-course">Start Course</a>
           </div>
         </div>
@@ -65,7 +67,6 @@
               Phyton For <br />
               Data Science
             </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <a href="pds_course.html" class="btn-course">View Course</a>
           </div>
         </div>
@@ -73,7 +74,6 @@
           <img src="img/fr.jpg" alt="Fullstack-Web" />
           <div class="course-details">
             <h3>Fullstack <br />Web</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <a href="fw_course.html" class="btn-course">View Course</a>
           </div>
         </div>
@@ -81,7 +81,6 @@
           <img src="img/dg.jpg" alt="design-grafis" />
           <div class="course-details">
             <h3>Design Graphic <br />With Figma</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <a href="dg_course.html" class="btn-course">View Course</a>
           </div>
         </div>
@@ -92,7 +91,6 @@
               AWS Cloud <br />
               Computing
             </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <a href="cc_course.html" class="btn-course">View Course</a>
           </div>
         </div>
@@ -103,7 +101,6 @@
               Introduction To <br />
               UI/UX Design
             </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <a href="uiux_course.html" class="btn-course">View Course</a>
           </div>
         </div>
@@ -122,7 +119,6 @@
           <img src="img/cc.jpg" alt="Quiz 1 AWS Cloud" />
           <div class="quiz-details">
             <h3>Quiz 1 AWS Cloud</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <p>Level: Beginner</p>
             <a href="cc_quiz.html" class="btn-quiz">Start Quiz</a>
           </div>
@@ -131,7 +127,6 @@
           <img src="img/ml.jpg" alt="Quiz 1 Machine Learning" />
           <div class="quiz-details">
             <h3>Quiz 1 Machine Learning</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <p>Level: Beginner</p>
             <a href="ml_quiz.html" class="btn-quiz">Start Quiz</a>
           </div>
@@ -140,7 +135,6 @@
           <img src="img/fr.jpg" alt="Quiz 1 Fullstack Web" />
           <div class="quiz-details">
             <h3>Quiz 1 Fullstack Web</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
             <p>Level: Beginner</p>
             <a href="fw_quiz.html" class="btn-quiz">Start Quiz</a>
           </div>
@@ -151,7 +145,9 @@
   </body>
   <footer>
     <div id="copyright">
-      <div class="wrapper">&copy; 2020. <b>Kelompok 3 RPL.</b> All Rights Reserved.</div>
+      <div class="wrapper">
+        &copy; 2023. <b>Kelompok 3 RPL.</b> All Rights Reserved.
+      </div>
     </div>
   </footer>
   <!-- Feather Icons -->
