--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet" />
     <!-- Styles -->
     <link rel="stylesheet" href="index/css/style.css" />
+    <link href="img/Logo_BMKG.png" rel="shotcut icon" />
   </head>
   <body>
     <nav>
