--- a/index_admin.html
+++ b/index_admin.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMKG.</title>
+    <title>BMKG E-Learning</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
 
     <!-- Feather icons -->
     <script src="https://unpkg.com/feather-icons"></script>
+    <link href="img/Logo_BMKG.png" rel="shotcut icon" />
     <!-- Style -->
     <link rel="stylesheet" href="index/css/style.css" />
   </head>
@@ -145,9 +143,7 @@
   </body>
   <footer>
     <div id="copyright">
-      <div class="wrapper">
-        &copy; 2023. <b>Kelompok 3 RPL.</b> All Rights Reserved.
-      </div>
+      <div class="wrapper">&copy; 2023. <b>Kelompok 3 RPL.</b> All Rights Reserved.</div>
     </div>
   </footer>
   <!-- Feather Icons -->
