--- a/ml_course.html
+++ b/ml_course.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMKG.</title>
+    <title>BMKG E-Learning</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="ml_course/css/style.css" />
+    <link href="img/Logo_BMKG.png" rel="shotcut icon">
   </head>
   <body>
 
@@ -35,7 +36,7 @@
     <div class="container">
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Data Visualization" />
+          <img src="img/data.png" alt="Data Visualization" />
           <div class="overlay">
             <a href="video1.html" class="btn-materi">View Video</a>
             <a href="modules1.html" class="btn-materi">View Modules</a>
@@ -43,14 +44,13 @@
         </div>
         <div class="materi-details">
           <h3>Data Visualization</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/python.png" alt="Phyton for Machine Learning" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -58,14 +58,13 @@
         </div>
         <div class="materi-details">
           <h3>Phyton for Machine Learning</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/machine.png" alt="Machine Learning Development" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -73,14 +72,13 @@
         </div>
         <div class="materi-details">
           <h3>Machine Learning Development</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/machine.png" alt="Machine Learning Opration (MLOps)" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -88,7 +86,6 @@
         </div>
         <div class="materi-details">
           <h3>Machine Learning Opration (MLOps)</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
