--- a/dg_course.html
+++ b/dg_course.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMKG.</title>
+    <title>BMKG E-Learning</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="ml_course/css/style.css" />
+    <link href="img/Logo_BMKG.png" rel="shotcut icon">
   </head>
   <body>
 
