--- a/ml_quiz.html
+++ b/ml_quiz.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="quiz/css/style.css" />
+    <link href="img/Logo_BMKG.png" rel="shotcut icon" />
   </head>
   <body>
     <!-- Quiz Start -->
