--- a/uiux_course.html
+++ b/uiux_course.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMKG.</title>
+    <title>BMKG E-Learning</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="ml_course/css/style.css" />
+    <link href="img/Logo_BMKG.png" rel="shotcut icon">
   </head>
   <body>
 
@@ -34,7 +35,7 @@
     <div class="container">
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Data Visualization" />
+          <img src="img/figma.png" alt="Preparations tools" />
           <div class="overlay">
             <a href="video1.html" class="btn-materi">View Video</a>
             <a href="modules1.html" class="btn-materi">View Modules</a>
@@ -42,14 +43,13 @@
         </div>
         <div class="materi-details">
           <h3>Preparations tools</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/LFD.png" alt="Low Fidelity Design" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -57,14 +57,13 @@
         </div>
         <div class="materi-details">
           <h3>Low Fidelity Design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/HFD.png" alt="High Fidelity Design" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -72,14 +71,13 @@
         </div>
         <div class="materi-details">
           <h3>High Fidelity Design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/cc.jpg" alt="Materi 2 AWS Cloud" />
+          <img src="img/prototype.png" alt="Prototyping" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -87,7 +85,6 @@
         </div>
         <div class="materi-details">
           <h3>Prototyping</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel ducimus!</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
