--- a/uiux_course.html
+++ b/uiux_course.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMKG E-Learning</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="ml_course/css/style.css" />
-    <link href="img/Logo_BMKG.png" rel="shotcut icon">
-  </head>
-  <body>
 
-<!-- Home Start -->
-<section id="home">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BMKG.</title>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="ml_course/css/style.css" />
+</head>
+
+<body>
+
+  <!-- Home Start -->
+  <section id="home">
     <div class="home-wrapper">
       <div class="video-wrapper">
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/55NvZjUZIO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </div>
-      <div class="text-wrapper">
-        <div class="kolom">
-          <h2 class="animated-text">Welcome to Introduction <br />to UI/UX Design Course! Let's Study</h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/55NvZjUZIO8" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+        <div class="text-wrapper">
+          <div class="kolom">
+            <h2 class="animated-text">Welcome to Introduction <br />to UI/UX Design Course! Let's Study</h2>
+          </div>
         </div>
       </div>
-    </div>
   </section>
   <!-- Home End -->
-  
 
-     <!-- Materi Start -->
-<section id="materi">
+
+  <!-- Materi Start -->
+  <section id="materi">
     <div class="container">
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/figma.png" alt="Preparations tools" />
+          <img src="img/uix-course1.jpg" alt="Data Visualization" />
           <div class="overlay">
             <a href="video1.html" class="btn-materi">View Video</a>
             <a href="modules1.html" class="btn-materi">View Modules</a>
@@ -43,13 +48,14 @@
         </div>
         <div class="materi-details">
           <h3>Preparations tools</h3>
+          <p>prepare the tools you need to learn about ui/ux, such as figma, adobe xd etc.</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/LFD.png" alt="Low Fidelity Design" />
+          <img src="img/uix-course2.jpg" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -57,13 +63,14 @@
         </div>
         <div class="materi-details">
           <h3>Low Fidelity Design</h3>
+          <p>Learn to create basic digital wireframes or hand-drawn drawings without color or content.</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/HFD.png" alt="High Fidelity Design" />
+          <img src="img/uix-course3.jpg" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -71,13 +78,15 @@
         </div>
         <div class="materi-details">
           <h3>High Fidelity Design</h3>
+          <p>Learn to create designs with Content, visual styles, and animated transitions all working together to make
+            high-fidelity assets look and function as close to the final product as possible.</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/prototype.png" alt="Prototyping" />
+          <img src="img/uix-course4.jpg" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -85,13 +94,16 @@
         </div>
         <div class="materi-details">
           <h3>Prototyping</h3>
+          <p>here you will learn to make simple models or mockups of concepts, ideas, products or services based on the
+            designs you made before</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
     </div>
   </section>
-  <!-- Materi End -->  
-    </div>
-  </body>
+  <!-- Materi End -->
+  </div>
+</body>
+
 </html>
