--- a/ml_course.html
+++ b/ml_course.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMKG E-Learning</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="ml_course/css/style.css" />
-    <link href="img/Logo_BMKG.png" rel="shotcut icon">
-  </head>
-  <body>
 
-<!-- Home Start -->
-<section id="home">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BMKG.</title>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="ml_course/css/style.css" />
+</head>
+
+<body>
+
+  <!-- Home Start -->
+  <section id="home">
     <div class="home-wrapper">
       <div class="video-wrapper">
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/KNAWp2S3w94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KNAWp2S3w94" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
         </div>
       </div>
       <div class="text-wrapper">
@@ -29,14 +34,14 @@
     </div>
   </section>
   <!-- Home End -->
-  
 
-     <!-- Materi Start -->
-<section id="materi">
+
+  <!-- Materi Start -->
+  <section id="materi">
     <div class="container">
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/data.png" alt="Data Visualization" />
+          <img src="img/cc.jpg" alt="Data Visualization" />
           <div class="overlay">
             <a href="video1.html" class="btn-materi">View Video</a>
             <a href="modules1.html" class="btn-materi">View Modules</a>
@@ -44,13 +49,15 @@
         </div>
         <div class="materi-details">
           <h3>Data Visualization</h3>
+          <p>This course will discuss data visualization</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
+
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/python.png" alt="Phyton for Machine Learning" />
+          <img src="img/ml-course1.jpg" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -58,13 +65,14 @@
         </div>
         <div class="materi-details">
           <h3>Phyton for Machine Learning</h3>
+          <p>In this course will discuss the basics of machine learning using python</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/machine.png" alt="Machine Learning Development" />
+          <img src="img/ml-course2.jpg" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
@@ -72,27 +80,31 @@
         </div>
         <div class="materi-details">
           <h3>Machine Learning Development</h3>
+          <p>This course will discuss machine learning from basic to advanced</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
       <div class="materi">
         <div class="materi-thumbnail">
-          <img src="img/machine.png" alt="Machine Learning Opration (MLOps)" />
+          <img src="img/ml-course3.jpg" alt="Materi 2 AWS Cloud" />
           <div class="overlay">
             <a href="video2.html" class="btn-materi">View Video</a>
             <a href="modules2.html" class="btn-materi">View Modules</a>
           </div>
         </div>
         <div class="materi-details">
-          <h3>Machine Learning Opration (MLOps)</h3>
+          <h3>Machine Learning Operation (MLOps)</h3>
+          <p>Learn the process of developing and operating machine learning systems in production environments by
+            applying various MLOps principles.</p>
           <button class="btn-materi">Watch Video</button>
           <button class="btn-materi">View Modules</button>
         </div>
       </div>
     </div>
   </section>
-  <!-- Materi End -->  
-    </div>
-  </body>
+  <!-- Materi End -->
+  </div>
+</body>
+
 </html>
